--- a/css/set2.css
+++ b/css/set2.css
@@ -17,7 +17,7 @@
 	margin: 10px 1%;
 	min-width: 320px;
 	max-width: 480px;
-	max-height: 360px;
+	height: 100%;
 	width: 48%;
 	height: auto;
 	background: #3085a3;
