--- a/css/set2.css
+++ b/css/set2.css
@@ -16,7 +16,7 @@
 	overflow: hidden;
 	margin: 10px 1%;
 	min-width: 320px;
-	max-width: 480px;
+	max-width: 100%;
 	height: 100%;
 	width: 50%;
 	height: auto;
