--- a/css/set2.css
+++ b/css/set2.css
@@ -6,13 +6,12 @@
 	padding: 1em 0 4em;
 	max-width: 1500px;
 	list-style: none;
-	text-align: center;
 }
 
 /* Common style */
 .grid figure {
 	position: relative;
-	float: left;
+	float: center;
 	overflow: hidden;
 	margin: 10px 1%;
 	min-width: 320px;
@@ -27,7 +26,7 @@
 
 .grid figure img {
 	position: relative;
-	display: block;
+	display: inline-flex;
 	min-height: 100%;
 	max-width: 100%;
 	opacity: 0.8;
@@ -95,7 +94,7 @@ figure.effect-julia {
 }
 
 figure.effect-julia img {
-	max-width: none;
+	width: 533,33px;
 	height: 400px;
 	-webkit-transition: opacity 1s, -webkit-transform 1s;
 	transition: opacity 1s, transform 1s;
