--- a/css/set2.css
+++ b/css/set2.css
@@ -13,7 +13,7 @@
 	position: relative;
 	float: center;
 	overflow: hidden;
-	margin: 10px 1%;
+	margin: 10px;
 	min-width: 320px;
 	max-width: 100%;
 	height: 100%;
