--- a/css/set2.css
+++ b/css/set2.css
@@ -17,8 +17,7 @@
 	min-width: 320px;
 	max-width: 100%;
 	height: 100%;
-	width: 50%;
-	height: auto;
+	width: 533,33px;
 	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
