--- a/css/set2.css
+++ b/css/set2.css
@@ -25,7 +25,7 @@
 
 .grid figure img {
 	position: relative;
-	display: inline-flex;
+	display: block;
 	min-height: 100%;
 	max-width: 100%;
 	opacity: 0.8;
