--- a/css/set2.css
+++ b/css/set2.css
@@ -4,20 +4,19 @@
 	clear: both;
 	margin: 0 auto;
 	padding: 1em 0 4em;
-	max-width: 1500px;
+	max-width: 1900px;
 	list-style: none;
+	text-align: center;
 }
 
 /* Common style */
 .grid figure {
 	position: relative;
-	float: center;
+	float: left;
 	overflow: hidden;
 	margin: 10px;
-	min-width: 320px;
-	max-width: 100%;
-	height: 100%;
 	width: 533,33px;
+	height: 400px;
 	background: #3085a3;
 	text-align: center;
 	cursor: pointer;
@@ -79,7 +78,7 @@
 
 .grid figure p {
 	letter-spacing: 1px;
-	font-size: 50%;
+	font-size: 68.5%;
 }
 
 /* Individual effects */
@@ -93,7 +92,7 @@ figure.effect-julia {
 }
 
 figure.effect-julia img {
-	width: 533,33px;
+	max-width: none;
 	height: 400px;
 	-webkit-transition: opacity 1s, -webkit-transform 1s;
 	transition: opacity 1s, transform 1s;
