--- a/css/demo.css
+++ b/css/demo.css
@@ -19,7 +19,6 @@ body {
 	font-weight: 400;
 	font-size: 1em;
 	font-family: 'Raleway', Arial, sans-serif;
-	text-align: center;
 }
 
 a {
@@ -38,7 +37,7 @@ section {
 }
 
 .content {
-	margin: 0;
+	margin: 0 auto;
 	max-width: 1000px;
 }
 
