--- a/css/demo.css
+++ b/css/demo.css
@@ -45,7 +45,7 @@ section {
 	clear: both;
 	margin: 0;
 	padding: 4em 1% 0;
-	color: #484B54;
+	color: #fff;
 	font-weight: 800;
 	font-size: 1.5em;
 }
