--- a/css/demo.css
+++ b/css/demo.css
@@ -65,7 +65,8 @@ section {
 	margin: 0;
 	font-weight: 800;
 	font-size: 4em;
-	line-height: 1.3;
+	line-height: 1;
+	padding: 0 0 10px 0;
 }
 
 .codrops-header h1 span {
